{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 14,
  "lineage": "e225728e-b57c-5c42-95c0-49ac9684f5e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d36c18e88aedcac8",
            "domain": "vpc",
            "id": "eipalloc-0d36c18e88aedcac8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-174-157-217.compute-1.amazonaws.com",
            "public_ip": "35.174.157.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat-gw-1"
            },
            "tags_all": {
              "Name": "dev-nat-gw-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085167882865:internet-gateway/igw-03a9305b3d136fb38",
            "id": "igw-03a9305b3d136fb38",
            "owner_id": "085167882865",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0a6dfddbfa636822c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d36c18e88aedcac8",
            "connectivity_type": "public",
            "id": "nat-03e791e69beb2af9f",
            "network_interface_id": "eni-0129c1dafadd43754",
            "private_ip": "10.0.1.190",
            "public_ip": "35.174.157.217",
            "subnet_id": "subnet-06611a9c387f1406c",
            "tags": {
              "Name": "dev-nat-gw-1"
            },
            "tags_all": {
              "Name": "dev-nat-gw-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085167882865:route-table/rtb-01e2650335834293f",
            "id": "rtb-01e2650335834293f",
            "owner_id": "085167882865",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03e791e69beb2af9f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-private-subnet-1"
            },
            "tags_all": {
              "Name": "dev-route-private-subnet-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6dfddbfa636822c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085167882865:route-table/rtb-0234f42fd2248f20f",
            "id": "rtb-0234f42fd2248f20f",
            "owner_id": "085167882865",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a9305b3d136fb38",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-public-subnets"
            },
            "tags_all": {
              "Name": "dev-route-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6dfddbfa636822c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016bb0cb45e9470d1",
            "route_table_id": "rtb-01e2650335834293f",
            "subnet_id": "subnet-04fa2eec2a7d06a31"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4265ca470a86b54",
            "route_table_id": "rtb-0234f42fd2248f20f",
            "subnet_id": "subnet-06611a9c387f1406c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085167882865:subnet/subnet-04fa2eec2a7d06a31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fa2eec2a7d06a31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085167882865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-1"
            },
            "tags_all": {
              "Name": "dev-private-1"
            },
            "vpc_id": "vpc-0a6dfddbfa636822c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085167882865:subnet/subnet-06611a9c387f1406c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06611a9c387f1406c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "085167882865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-1"
            },
            "tags_all": {
              "Name": "dev-public-1"
            },
            "vpc_id": "vpc-0a6dfddbfa636822c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085167882865:vpc/vpc-0a6dfddbfa636822c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa56c3dcfec7500b",
            "default_route_table_id": "rtb-0974584444fbb2a8b",
            "default_security_group_id": "sg-0f058a5522bdfdfa8",
            "dhcp_options_id": "dopt-083adedcf91766389",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6dfddbfa636822c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0974584444fbb2a8b",
            "owner_id": "085167882865",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}